[package]
name = "iter_vals"
version = "0.1.0"
authors = ["aticu <15schnic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "On the fly iterator creation."
repository = "https://github.com/aticu/iter_vals"
keywords = ["iter", "iterator", "macro"]
categories = ["rust-patterns"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
